syntax = "proto3";

option csharp_namespace = "HomeAnalytica.Grpc.Contracts.DataCollection";

package data_collection;

import "google/protobuf/timestamp.proto";

enum MeasuredQuantity {
    UNSPECIFIED = 0;
    TEMPERATURE = 1;
    HUMIDITY = 2;
    ENERGY_CONSUMPTION = 3;
}

// The sensor data service definition.
// TODO Rename to "service SensorDataService"
service SensorDataSender {
    // Sends sensor data
    // TODO Rename to SubmitSensorDataRequest
    rpc SubmitSensorData (SensorDataRequest) returns (SensorDataResponse);
    
    // Retrieves sensor data for a specific type
    rpc GetSensorDataByType (GetSensorDataRequest) returns (GetSensorDataResponse);
}

// The request message for retrieving sensor data by measured quantity
message GetSensorDataRequest {
    MeasuredQuantity measured_quantity = 1;
    int64 device_id = 2;
}

// The response message containing the sensor data
message GetSensorDataResponse {
    repeated SensorDataRecord records = 1;
}

// A single sensor data record
message SensorDataRecord {
    int64 device_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    MeasuredQuantity measured_quantity = 3;
    double value = 4;
}

// The request message containing sensor data
message SensorDataRequest {
    int64 device_id = 1;
    google.protobuf.Timestamp timestamp = 2;
    MeasuredQuantity measured_quantity = 3;
    double value = 4;
}

// The response message confirming receipt of the data
message SensorDataResponse {
    string message = 1;
}
